explore: fix loading with graph and table collapsed

--- a/public/sass/pages/_explore.scss
+++ b/public/sass/pages/_explore.scss
@@ -179,7 +179,7 @@
   display: none;
 }
 
-.explore-panel--collapsable {
+.explore-panel--collapsible {
   .explore-panel__header {
     cursor: pointer;
   }
